updated image sizes

--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -32,7 +32,7 @@
         
     </section>
     
-    <section id="about-me" "profile-photo" "flex-row">
+    <section id="about-me" "profile-photo">
         <h2 class="section-title">About Me</h2>
             <p> My name is Winnie Wu, and I am a full-stack developer who is passionate about improving access to quality healthcare so individuals can have a healthier life. </p>
             <p> I strive to use my coding skills to improve technologies used in healthcare settings for better patient care.</p>
@@ -42,17 +42,17 @@
     <section id="my-work">
         <h2 class="section-title">My Work</h2>
         <p> Here are my past and current work.</p>
-        <div class="projects" "projects-img">
+        <div class="projects-icon">
             <title> HTML/CSS </title>
-            <img src="./assets/images/html-css.jpg" alt="HTML & CSS" />
+            <img style="width:20em; height:15em;" src="./assets/images/html-css.jpg" alt="HTML & CSS" />
         </div>
-        <div class="projects" "projects-imgs">
+        <div class="projects">
             <title class="txt"> Javascript </title>
-            <img src="./assets/images/javascript.jpg" alt="Javascript" />
+            <img style="width:10em; height:10em;" src="./assets/images/javascript.jpg" alt="Javascript" />
         </div>
-        <div class="projects" "projects-imgs">
+        <div class="projects">
             <title class="txt"> APIs </title>
-            <img src="./assets/images/APIs.jpg" alt="APIs" />
+            <img style="width:10em; height:10em;"src="./assets/images/APIs.jpg" alt="APIs" />
         </div>
 
     </section>
