updated text on images

--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title> Winnie's Portfolio</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
-    
 </head>
 <body>
     <header>
@@ -42,19 +41,23 @@
     <section id="my-work">
         <h2 class="section-title">My Work</h2>
         <p> Here are my past and current work.</p>
+    <div class="container-txt">
         <div class="projects-icon">
-            <title> HTML/CSS </title>
-            <img style="width:20em; height:15em;" src="./assets/images/html-css.jpg" alt="HTML & CSS" />
+            <h3> HTML/CSS </h3>
+            <img style="width:20em; height:15em" class="item" src="./assets/images/html-css.jpg" alt="HTML & CSS" />
+            <div class="bottom-left">HTML/CSS</div>
         </div>
         <div class="projects">
-            <title class="txt"> Javascript </title>
-            <img style="width:10em; height:10em;" src="./assets/images/javascript.jpg" alt="Javascript" />
+            <h3> Javascript </h3>
+            <img style="width:10em; height:10em;" class="item" src="./assets/images/javascript.jpg" alt="Javascript" />
+            <div class="bottom-right">Javascript</div>
         </div>
         <div class="projects">
-            <title class="txt"> APIs </title>
-            <img style="width:10em; height:10em;"src="./assets/images/APIs.jpg" alt="APIs" />
+            <h3> APIs </h3>
+            <img style="width:10em; height:10em;" class="item" src="./assets/images/APIs.jpg" alt="APIs" />
+            <div class="bottom-left"> APIs</div>
         </div>
-
+    </div>
     </section>
 
     <section id="contact-me">
@@ -73,13 +76,7 @@
     </body>
 </html>
 
-<p>>>fix the hero bg size to full <cross page </p>
-<p>x//present with my name, a recent photo or avatar, and links to sections about me, my work, and how to contact me </p>
->> reduce my image size
-x//nav links: clicking on one scrolls to the corresponding section
---nav bar with corresponding ahref to each sections
->>want to make each a separate line
-<br>//clicking on the nav link to the section</br>
+
 <p>//when presented with the developer's first application THEN that application's image should be larger in size than the others </p>
 (when hover over section image, gets brighter)
 //when click on the images of the application, gets taken to that deployed application
