--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -33,31 +33,36 @@
     
     <section id="about-me" "profile-photo">
         <h2 class="section-title">About Me</h2>
-            <p> My name is Winnie Wu, and I am a full-stack developer who is passionate about improving access to quality healthcare so individuals can have a healthier life. </p>
-            <p> I strive to use my coding skills to improve technologies used in healthcare settings for better patient care.</p>
-            <img src="./assets/images/Winnie.jpg" alt="" />
+        <p> My name is Winnie Wu, and I am a full-stack developer who is passionate about improving access to quality healthcare so individuals can have a healthier life. </p>
+        <p> I strive to use my coding skills to improve technologies used in healthcare settings for better patient care.</p>
+        <img src="./assets/images/Winnie.jpg" alt="profile-photo" />
     </section>
 
     <section id="my-work">
         <h2 class="section-title">My Work</h2>
         <p> Here are my past and current work.</p>
-    <div class="container-txt">
-        <div class="projects-icon">
-            <h3> HTML/CSS </h3>
-            <img style="width:20em; height:15em" class="item" src="./assets/images/html-css.jpg" alt="HTML & CSS" />
-            <div class="bottom-left">HTML/CSS</div>
+        <div class="container-txt">
+            <a href="https://winniecwu.github.io/run-buddy/">
+                <div class="projects-icon">
+                    <img style="width:20em; height:15em" src="./assets/images/html-css.jpg" alt="HTML & CSS" />
+                    <div class="project-text">HTML/CSS</div>
+                </div>
+            </a>
+
+            <a href="https://winniecwu.github.io/robot-gladiators/">
+                <div class="projects">
+                    <img style="width:10em; height:10em;" src="./assets/images/javascript.jpg" alt="Javascript" />
+                    <div class="project-text">Javascript</div>
+                </div>
+            </a>
+
+            <a href="">
+                <div class="projects">
+                    <img style="width:10em; height:10em;" src="./assets/images/APIs.jpg" alt="APIs" />
+                    <div class="project-text"> APIs</div>
+                </div>
+            </a>
         </div>
-        <div class="projects">
-            <h3> Javascript </h3>
-            <img style="width:10em; height:10em;" class="item" src="./assets/images/javascript.jpg" alt="Javascript" />
-            <div class="bottom-right">Javascript</div>
-        </div>
-        <div class="projects">
-            <h3> APIs </h3>
-            <img style="width:10em; height:10em;" class="item" src="./assets/images/APIs.jpg" alt="APIs" />
-            <div class="bottom-left"> APIs</div>
-        </div>
-    </div>
     </section>
 
     <section id="contact-me">
@@ -75,10 +80,3 @@
 
     </body>
 </html>
-
-
-<p>//when presented with the developer's first application THEN that application's image should be larger in size than the others </p>
-(when hover over section image, gets brighter)
-//when click on the images of the application, gets taken to that deployed application
-//WHEN I resize the page or view the site on various screens and devices, THEN I am presented with a responsive layout that adapts to my viewport
---flexbot
