added interactive front-end group project to my portfolio

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                 </div>
             </a>
 
-            <a href="">
+            <a href="https://aaronhleung.github.io/inspo/">
                 <div class="projects">
                     <img style="width:10em; height:10em;" src="./assets/images/APIs.jpg" alt="APIs" />
-                    <div class="project-text"> APIs</div>
+                    <div class="project-text"> Interactive Front-End Project with Team Inspo</div>
                 </div>
             </a>
         </div>
