added full stack project

--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
                     <div class="project-text"> Interactive Front-End Project with Team Inspo</div>
                 </div>
             </a>
+
+        
+
+            <a href="https://winniecwu.github.io/OurSpace/">
+                <div class="projects">
+                    <img style="width:10em; height:10em;" src="./assets/images/fullStack.jpg" alt="fullStack" />
+                    <div class="project-text"> Interactive Full Stack Project: OurSpace, a Tech Blog</div>
+                </div>
+            </a>
+
         </div>
     </section>
 
