updated project details

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <a href="https://winniecwu.github.io/OurSpace/">
                 <div class="projects">
                     <img style="width:10em; height:10em;" src="./assets/images/fullStack.jpg" alt="fullStack" />
-                    <div class="project-text"> Interactive Full Stack Project: OurSpace, a Tech Blog</div>
+                    <div class="project-text"> Interactive Full Stack Project: OurSpace, an e-Blog</div>
                 </div>
             </a>
 
