added final project

--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
                 </div>
             </a>
 
+            <a href="https://rocky-falls-31812.herokuapp.com/">
+                <div class="projects">
+                    <img style="width:10em; height:10em;" src="./assets/images/dreadit.jpg" alt="MERNstack" />
+                    <div class="project-text"> Interactive MERN Full Stack Project: DREAD-IT, an e-forum for horror fanatics to connect.</div>
+                </div>
+            </a>
+
         </div>
     </section>
 
