--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
             </a>
 
 
-            
+
 
             <a href="https://rocky-falls-31812.herokuapp.com/">
                 <div class="projects">
-                    <img style="width:10em; height:10em;" src="./assets/images/dreadit.jpg" alt="MERNstack" />
+                    <img style="width:10em; height:10em;" src="./assets/images/dreadit.jpg" alt="dreadit" />
                     <div class="project-text"> MERN Full Stack e-forum for horror fanatics to connect.</div>
                 </div>
             </a>
