--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
             <a href="https://rocky-falls-31812.herokuapp.com/">
                 <div class="projects">
-                    <img style="width:10em; height:10em;" src="./assets/images/dreadit.jpg" alt="dreadit" />
+                    <img style="width:10em; height:10em;" src="./assets/images/mern.jpg" alt="mern" />
                     <div class="project-text"> MERN Full Stack e-forum for horror fanatics to connect.</div>
                 </div>
             </a>
