--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <img src="./assets/images/github_icon.jpg" alt="github icon"/>
         </a>
 
-        <a href="www.linkedin.com/in/winnie-wu-mph">
+        <a href="www.linkedin.com/in/winniecwu7">
             <img src="./assets/images/linkedin_icon.jpg" alt="linkedIn icon"/>
         </a>
     
