--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section id="my-portfolio">
         <h2 class="section-title">Portfolio</h2>
         <p> Below are a handful of group and solo-projects developed during UC Berkeley's full stack coding bootcamp. If you'd like to see more of my other projects, please visit my GitHub repository found in my Contact section!</p>
-        <div class="container-txt flex-wrap primary-border">
+        <div class="container-txt inline flex-wrap primary-border">
           
             <a href="https://winniecwu.github.io/run-buddy/">
                 <div class="projects-icon">
@@ -59,14 +59,14 @@
 
             <a href="https://winniecwu.github.io/robot-gladiators/">
                 <div class="projects-icon">
-                    <img style="width:20em; height:15em;" src="./assets/images/javascript.jpg" alt="Javascript" />
+                    <img style="width:20em; height:15em" src="./assets/images/javascript.jpg" alt="Javascript" />
                     <div class="project-text">Javascript</div>
                 </div>
             </a>
 
             <br> 
 
-            <a href="https://aaronhleung.github.io/inspo/">">
+            <a href="https://aaronhleung.github.io/inspo/">
                 <div class="projects-icon">
                     <img style="width:20em; height:15em;" src="./assets/images/inspo.png" alt="inspo" />
                     <div class="project-text"> Interactive Front-End Project with Team Inspo</div>
