--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <div class="projects-icon item">
             <img
               style="width: 20em; height: 15em"
-              src="./assets/images/ourspace.jpg"
+              src="./assets/images/ourspace.JPG"
               alt="ourspace"
             />
             <div class="project-text">
@@ -122,8 +122,8 @@
           <div class="projects-icon item">
             <img
               style="width: 20em; height: 15em"
-              src="./assets/images/deep-thoughts.jpg"
-              alt="social-network"
+              src="./assets/images/deep-thoughts.JPG"
+              alt="deep-thoughts"
             />
             <div class="project-text">
               MERN Full Stack e-forum for community members to connect.
@@ -135,7 +135,7 @@
           <div class="projects-icon item">
             <img
               style="width: 20em; height: 15em"
-              src="./assets/images/budget-tracker.jpg"
+              src="./assets/images/budget-tracker.JPG"
               alt="budget-tracker"
             />
             <div class="project-text">
