--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <div class="projects-icon item">
             <img
               style="width: 20em; height: 15em"
-              src="./assets/images/note-taker.jpg"
+              src="./assets/images/note-taker.JPG"
               alt="note-taker"
             />
             <div class="project-text">
