added github link and languages used

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <a href="#my-portfolio">Portfolio</a>
           </li>
           <li>
-            <a href="#contact-me">Contact Me</a>
+            <a href="#resume">Resume</a>
           </li>
           <li>
-            <a href="#resume">Resume</a>
+            <a href="#contact-me">Contact Me</a>
           </li>
         </ul>
       </nav>
@@ -72,6 +72,7 @@
         below!
       </p>
       <div class="inline flex-wrap primary-border container">
+        <div>
         <a href="https://winniecwu.github.io/run-buddy/">
           <div class="projects-icon item">
             <img
@@ -82,7 +83,11 @@
             <div class="project-text">Run Buddy site with HTML/CSS</div>
           </div>
         </a>
+        <p> Link to github repo: <a href="https://github.com/WinnieCWu/run-buddy"/> https://github.com/WinnieCWu/run-buddy </p>
+        <p> Tools/Languages Used: HTML & CSS </p>
+      </div>
 
+      <div>
         <a href="https://winniecwu.github.io/robot-gladiators/">
           <div class="projects-icon item">
             <img
@@ -93,7 +98,11 @@
             <div class="project-text">Robot Gladiator with Javascript</div>
           </div>
         </a>
+        <p> Link to github repo: <a href="https://github.com/WinnieCWu/robot-gladiators"/> https://github.com/WinnieCWu/robot-gladiators </p>
+        <p> Tools/Languages Used: Javascript</p>
+      </div>
 
+      <div>
         <a href="https://aaronhleung.github.io/inspo/">
           <div class="projects-icon item">
             <img
@@ -104,7 +113,11 @@
             <div class="project-text">Front-End Project with Team Inspo</div>
           </div>
         </a>
+        <p> Link to github repo: <a href="https://github.com/aaronhleung/inspo"/> https://github.com/aaronhleung/inspo </p>
+        <p> Tools/Languages Used: Two server-side APIs, CSS, HTML, JavaScript, jQuery, and MD Bootstrap CDN</p>
+      </div>
 
+      <div>
         <a href="https://obscure-citadel-61027.herokuapp.com/">
           <div class="projects-icon item">
             <img
@@ -117,7 +130,11 @@
             </div>
           </div>
         </a>
+        <p> Link to github repo: <a href="https://github.com/WinnieCWu/OurSpace.git"/> https://github.com/WinnieCWu/OurSpace.git </p>
+        <p> Tools/Languages Used: Node.js, Express.js, Dotenv, Jest, Handlebars.js, and MySQL </p>
+      </div>
 
+      <div>
         <a href="http://afternoon-reef-90509.herokuapp.com/">
           <div class="projects-icon item">
             <img
@@ -130,7 +147,11 @@
             </div>
           </div>
         </a>
+        <p> Link to github repo: <a href="https://github.com/WinnieCWu/some-deep-thoughts.git"/> https://github.com/WinnieCWu/some-deep-thoughts.git </p>
+        <p> Tools/Languages Used: Apollo Server, JWT, GraphQL, React </p>
+      </div>
 
+      <div>
         <a href="https://limitless-lowlands-47356.herokuapp.com/">
           <div class="projects-icon item">
             <img
@@ -144,7 +165,11 @@
             </div>
           </div>
         </a>
+        <p> Link to github repo: <a href="https://github.com/WinnieCWu/progressive-budget-tracker.git"/> https://github.com/WinnieCWu/progressive-budget-tracker.git </p>
+        <p> Tools/Languages Used: IndexedDB, Service Worker, web manifest, Heroku, MongoDB Atlas </p>
+      </div>
 
+      <div>
         <a href="http://enigmatic-mountain-89996.herokuapp.com/">
           <div class="projects-icon item">
             <img
@@ -158,12 +183,33 @@
             </div>
           </div>
         </a>
+        <p> Link to github repo: <a href="https://github.com/WinnieCWu/Note-Taker-App.git"/> https://github.com/WinnieCWu/Note-Taker-App.git </p>
+        <p> Tools/Languages Used: Express.js, Heroku</p>
       </div>
+    </div>
+
+    </section>
+
+    <section id="resume">
+      <h2 class="section-title"><a
+        href="https://drive.google.com/file/d/11f4W68BhWL-W0v8EzXmg8lyeV11pCu3e/view?usp=sharing"
+      />Resume</h2>
+      <a
+        href="https://drive.google.com/file/d/11f4W68BhWL-W0v8EzXmg8lyeV11pCu3e/view?usp=sharing"
+      >
+        My Resume
+      </a>
     </section>
 
     <section id="contact-me">
       <h2 class="section-title">Contact Me</h2>
-
+      <p>
+        Please either click on the icons below or complete the form below, and I
+        will respond timely. Thank you for your interest!
+      </p>
+      <address>
+        Email: <a href="mailto:winniechn7@gmail.com">winniechn7@gmail.com</a>
+      </address>
       <form id="contact-form">
         <h1 data-testid="h1tag">Contact me</h1>
 
@@ -184,15 +230,6 @@
       <button data-testid="button" type="submit">Submit</button>
     </section>
 
-    <section id="resume">
-      <h2 class="section-title">Resume</h2>
-      <a
-        href="https://drive.google.com/file/d/1ufvNxb8wiD16pYSdDc2q71br7Gmi3fMm/view?usp=sharing"
-      >
-        My Resume
-      </a>
-    </section>
-
     <footer>
       <p>Thank you for visiting!</p>
       <a href="https://github.com/WinnieCWu">
@@ -208,6 +245,9 @@
           src="./assets/images/stackoverflow_icon.jpg"
           alt="stack overflow icon"
         />
+      </a>
+      <a href="mailto:winniechn7@gmail.com">
+        <img src="./assets/images/gmail.jpeg" alt="gmail" />
       </a>
     </footer>
   </body>
